@startuml Ebene3.png
hide empty members

package repository {
    interface LogoRepository
    interface ProjectRepository
    interface TailoringRepository
    interface SelectionVektorProfileRepository
    interface DocumentSigneeRepository
    interface ApplicableDocumentRepository
}

package tailoring {

    interface TailoringServiceRepository {
        getProject(project : String) : Optional<Project>
        updateTailoring(project : String, tailoring : Tailoring) : Tailoring
        getTailoring(project : String, tailoring : String): Optional<Tailoring>
        getScreeningSheet(project : String, tailoring : String): Optional<ScreeningSheet>
        getScreeningSheetFile(project : String, tailoring : String): Optional<byte[]>
        updateDocumentSignature(project : String, tailoring : String, signature : DocumentSignature) : Optional<DocumentSignature>
        updateName(project : String, tailoring : String, name : String) : Optional<Tailoring>
        getSelectionVectorProfile() : Collection<SelectionVectorProfile>
        getDefaultSignatures() : Collection<DocumentSignature>
        deleteTailoring(project : String, tailoring : String)
        addNote(project : String, tailoring : String, note : Note) : Optional<Tailoring>
        existsTailoring(project : String, tailoring : String) : boolean
        setIssue(project : String, tailoring : String, issue : String) : Optional<Tailoring>
    }

    abstract class JPATailoringServiceRepositoryMapper {
        {abstract} toDomain(entity : ProjektEntity) : Projekt
        {abstract} toDomain(entity : TailoringEntity) : Tailoring
        {abstract} updateTailoring(domain : Tailoring,  entity : TailoringEntity) : void
        {abstract} toScreeningSheetParameters(entity : ScreeningSheetEntity) : ScreeningSheet
        toScreeningSheetParameters(entity : ScreeningSheetEntity, resource : ScreeningSheetBuilder) : void
        {abstract} updateDocumentSignature(domain : DokumentZeichnung, entity : DokumentZeichnungEntity) : void
        {abstract} toDomain(entity : DocumentSignatureEntity) : DocumentSignature
        {abstract} toDomain(entity : FileEntity) : File
        {abstract} toDomain(entity : SelektionVectorProfileEntity) : SelectionVectorProfile
        {abstract} getDefaultSignatures(entity : DocumentSigneeEntity) : DocumentSignee
        {abstract} toEntity(entity : Note) : NoteEntity
        {abstract} toEntity(domain : Chapter<TailoringRequirement>) : TailoringCatalogChapterEntity
        addNumber(builder : TailoringCatalogChapterEntityBuilder) : void
        resolve(domain: Logo) : LogoEntity
        resolve(domain: Document) : DocumentEntity
    }
    JPATailoringServiceRepositoryMapper -->  "1" LogoRepository : logoRepository
    JPATailoringServiceRepositoryMapper -->  "1" ApplicableDocumentRepository : applicableDocumentRepository

    class JPATailoringServiceRepository {
    }
    TailoringServiceRepository <|.. JPATailoringServiceRepository
    JPATailoringServiceRepository --> "1" JPATailoringServiceRepositoryMapper : mapper
    JPATailoringServiceRepository --> "1" ProjectRepository : projectRepository
    JPATailoringServiceRepository --> "1" TailoringRepository : tailoringRepository
    JPATailoringServiceRepository --> "1" SelectionVektorProfileRepository : selectionVectorProfileRepository
    JPATailoringServiceRepository --> "1" DocumentSigneeRepository : documentSigneeRepository

    interface TailoringDeletablePredicateRepository {
        getTailoringState(project : String, tailoring : String) : Optional<TailoringState>
    }
    class JPATailoringDeletablePredicateRepository {
    }
    TailoringDeletablePredicateRepository <|.. JPATailoringDeletablePredicateRepository


    abstract class JPABaseRequirementsProviderRepositoryMapper {
        {abstract} getBaseCatalog(entity : BaseCatalogEntity) : Catalog<BaseRequirement>
    }

    interface BaseRequirementsProviderRepository {
        getBaseCatalog(project : String) : Optional<Map<String, BaseRequirement>
    }
    class JPABaseRequirementsProviderRepository {
    }
    BaseRequirementsProviderRepository <|.. JPABaseRequirementsProviderRepository
    JPABaseRequirementsProviderRepository --> "1" JPABaseRequirementsProviderRepositoryMapper : mapper
}
@enduml
